// Copyright 2024 The argocd-agent Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/argoproj-labs/argocd-agent/pkg/api/grpc/replicationapi";

package replicationapi;

import "google/api/annotations.proto";
import "github.com/cloudevents/sdk-go/binding/format/protobuf/v2/pb/cloudevent.proto";

// ReplicatedEvent wraps an event with replication metadata
message ReplicatedEvent {
    // The original CloudEvent being replicated
    io.cloudevents.v1.CloudEvent event = 1;

    // Name of the agent this event is associated with
    string agent_name = 2;

    // Direction of the event: "inbound" (agent->principal) or "outbound" (principal->agent)
    string direction = 3;

    // Sequence number for ordering and deduplication
    uint64 sequence_num = 4;

    // Unix timestamp (seconds) when the event was processed by primary
    int64 processed_at_unix = 5;
}

// ReplicationSnapshot contains the full state for initial sync
message ReplicationSnapshot {
    // State for all known agents
    repeated AgentState agents = 1;

    // The sequence number of the last event included in this snapshot
    uint64 last_sequence_num = 2;

    // Principal-scoped resources (e.g. ApplicationSets) not associated with any agent
    repeated Resource principal_resources = 3;
}

// AgentState represents the replicated state for a single agent
message AgentState {
    // Agent name
    string name = 1;

    // Agent mode: "autonomous" or "managed"
    string mode = 2;

    // Whether the agent is currently connected
    bool connected = 3;

    // Resources managed by this agent
    repeated Resource resources = 4;
}

// Resource represents a resource managed by an agent
message Resource {
    string name = 1;
    string namespace = 2;
    string kind = 3;
    string uid = 4;
    bytes spec_checksum = 5;
    bytes data = 6;
}

// ReplicationAck is sent by the replica to acknowledge processed events
message ReplicationAck {
    // The highest sequence number that has been processed
    uint64 acked_sequence_num = 1;
}

// ReplicationStatus provides health and status information
message ReplicationStatus {
    // Current sequence number on the primary
    uint64 current_sequence_num = 1;

    // Number of events pending replication
    int32 pending_events = 2;

    // Unix timestamp of the last replicated event
    int64 last_event_unix = 3;

    // Number of connected replicas
    int32 connected_replicas = 4;
}

// SnapshotRequest is sent by replica to request initial state
message SnapshotRequest {
    // If set, only return events after this sequence number (for resumption)
    uint64 since_sequence_num = 1;
}

// StatusRequest is used to query replication status
message StatusRequest {}

// Replication service for principal-to-principal state replication
service Replication {
    // Subscribe establishes a bidirectional stream for replication.
    // The replica sends ACKs and receives replicated events.
    rpc Subscribe(stream ReplicationAck) returns (stream ReplicatedEvent) {
        option (google.api.http).get = "/api/v1/replication/subscribe";
    }

    // GetSnapshot returns the current state snapshot for initial sync
    rpc GetSnapshot(SnapshotRequest) returns (ReplicationSnapshot) {
        option (google.api.http).get = "/api/v1/replication/snapshot";
    }

    // Status returns the current replication status
    rpc Status(StatusRequest) returns (ReplicationStatus) {
        option (google.api.http).get = "/api/v1/replication/status";
    }
}
